--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class="layout-wrapper">
       <div class="display-input-wrapper">
-        <div id="display-calc" class="display-calc"></div>
-        <div id="display-number" class="display-number"></div>
-        <div id="keys" class="keys"></div>
+        <div class="display-calc"></div>
+        <div class="display-number"></div>
+        <div class="keys"></div>
       </div>
 
-      <div id="output-wrapper" class="output-wrapper"></div>
+      <div class="output-wrapper"></div>
     </div>
     <script src="index.js"></script>
   </body>
