Logic & look change

--- a/index.html
+++ b/index.html
@@ -7,15 +7,39 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="layout-wrapper">
-      <div class="display-input-wrapper">
-        <div class="display-calc"></div>
-        <div class="display-number"></div>
-        <div class="keys"></div>
+    <div class="menu-wrapper">
+      <div class="menu">
+        <div class="menu-start">
+          <a href="#" class="menu-item">Info</a>
+          <a href="#" class="menu-item">Dark Mode</a>
+        </div>
+
+        <div class="footer-links">
+          <a href="#" class="footer-item">Impressum</a>
+          <a href="#" class="footer-item">Datenschutz</a>
+          <a href="#" class="footer-item">Jobs</a>
+          <p class="footer-item">&copy;2024<br />stiehle.de</p>
+        </div>
       </div>
 
-      <div class="output-wrapper"></div>
+      <div class="layout-wrapper">
+        <div class="display-input-wrapper">
+          <div class="nav">
+            <div class="burger-menu" onclick="showMenu()">
+              <div class="menu-icon"></div>
+              <div class="menu-icon"></div>
+              <div class="menu-icon"></div>
+            </div>
+          </div>
+          <div class="display-calc"></div>
+          <div class="display-number"></div>
+          <div class="keys"></div>
+        </div>
+
+        <div class="output-wrapper"></div>
+      </div>
     </div>
+
     <script src="index.js"></script>
   </body>
 </html>
